--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@types/react-dom": "^18.3.1",
         "@types/react-router-dom": "^5.3.3",
         "ajv": "^7.2.4",
+        "tailwindcss": "^3.4.15",
         "typescript": "^5.6.3"
     }
 }
